--- a/res/layout/view_float.xml
+++ b/res/layout/view_float.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageButton xmlns:android="http://schemas.android.com/apk/res/android"
+<com.shang.monkeyhelper.FloatView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/view_float"
     android:layout_width="60dp"
     android:layout_height="60dp"
     android:src="@drawable/ic_launcher" >
 
-</ImageButton>
+</com.shang.monkeyhelper.FloatView>
