--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -50,8 +50,19 @@
             android:id="@+id/change_floatview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAllCaps="false"
-            android:text="悬浮按钮已关闭" />
+            android:text="悬浮按钮已关闭"
+            android:textAllCaps="false" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/activity_vertical_margin" />
+
+        <Button
+            android:id="@+id/change_leakicon"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Leak Trace自动展示已开启"
+            android:textAllCaps="false" />
 
         <View
             android:layout_width="match_parent"
