--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -68,6 +68,17 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/activity_vertical_margin" />
 
+        <Button
+            android:id="@+id/restart_launcher"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="重启 Launcher"
+            android:textAllCaps="false" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/activity_vertical_margin" />
+
         <!--
              <Button
             android:id="@+id/expand_statusbar"
