--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -57,7 +57,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/activity_vertical_margin" />
 
-        <Button
+        <!-- <Button
             android:id="@+id/change_leakicon"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -66,8 +66,19 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="@dimen/activity_vertical_margin" />
+            android:layout_height="@dimen/activity_vertical_margin" /> -->
 
+        <Button
+            android:id="@+id/to_leaks"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="查看 Leak Trace"
+            android:textAllCaps="false" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/activity_vertical_margin" />
+        
         <Button
             android:id="@+id/restart_launcher"
             android:layout_width="match_parent"
