--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -57,16 +57,16 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/activity_vertical_margin" />
 
-        <!-- <Button
-            android:id="@+id/change_leakicon"
+        <Button
+            android:id="@+id/monkey_to_leakcanary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Leak Trace自动展示已开启"
+            android:text="已禁止Monkey启动LeakCanary"
             android:textAllCaps="false" />
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="@dimen/activity_vertical_margin" /> -->
+            android:layout_height="@dimen/activity_vertical_margin" />
 
         <Button
             android:id="@+id/to_leaks"
