--- a/res/menu/blacklist.xml
+++ b/res/menu/blacklist.xml
@@ -8,7 +8,7 @@
         android:orderInCategory="1"
         android:showAsAction="ifRoom"
         android:title="@string/action_edit"/>
-    <item
+    <!-- <item
         android:id="@+id/action_reload"
         android:icon="@drawable/ic_menu_reload"
         android:orderInCategory="2"
@@ -19,6 +19,6 @@
         android:icon="@android:drawable/ic_menu_share"
         android:orderInCategory="3"
         android:showAsAction="ifRoom"
-        android:title="@string/action_share"/>
+        android:title="@string/action_share"/> -->
 
 </menu>
