--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -2,11 +2,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.shang.monkeyhelper.MainActivity" >
 
-    <item
+    <!-- <item
         android:id="@+id/action_settings"
         android:icon="@android:drawable/ic_menu_preferences"
         android:orderInCategory="1"
         android:showAsAction="ifRoom"
-        android:title="@string/action_settings"/>
+        android:title="@string/action_settings"/> -->
 
 </menu>
